--- a/_src/css/style.css
+++ b/_src/css/style.css
@@ -36,6 +36,19 @@ section {
     color:               silver;
 }
 
+section header {
+    font-size:           64px;
+    color:               #008C9E;
+}
+section header a {
+    color:               #008C9E;
+    text-decoration:     none;
+}
+section header a:hover {
+    color:               #008C9E;
+    text-decoration:     none;
+}
+
 aside {
 }
 
