--- a/_src/css/style.css
+++ b/_src/css/style.css
@@ -1,186 +1,187 @@
 /*
  * Stylesheet for lc3dyr
- * 
- * Author: laerador
- * Email:  laerador@lc3dyr.de
- * 
+ *
+ * Author:                   laerador
+ * Email:                    laerador@lc3dyr.de
+ *
  */
 
 /* General Site Settings */
 body {
-    background-color:#343838;
+    background-color:        #343838;
 }
 
 /* Layout */
 /* div#nav { */
-/*     position:            absolute; */
-/*     top:                 0px; */
-/*     left:                0px; */
-/*     right:               0px; */
-/*     height:              40px; */
+/*     position:             absolute; */
+/*     top:                  0px; */
+/*     left:                 0px; */
+/*     right:                0px; */
+/*     height:               40px; */
 
-/*     background-color:    black; */
+/*     background-color:     black; */
 /* } */
 
 section {
-    position:            absolute;
-    top:                 75px;
-    left:                575px;
-    right:               200px;
-    min-width:           450px;
-    min-width:           350px;
+    position:                absolute;
+    top:                     75px;
+    left:                    575px;
+    right:                   200px;
+    min-width:               450px;
+    min-width:               350px;
 
-    font-family:         Courier;
-    text-align:          justify;
-    font-size:           12pt;
-    line-height:         16pt;
-    color:               silver;
+    font-family:             Courier;
+    text-align:              justify;
+    font-size:               12pt;
+    line-height:             16pt;
+    color:                   silver;
 }
 
 header {
-    font-size:           64px;
-    color:               #00DFFC;
+    font-size:               64px;
+    color:                   #00DFFC;
 }
 header a {
-    color:               #00DFFC;
-    text-decoration:     none;
+    color:                   #00DFFC;
+    text-decoration:         none;
 }
-header a:hover {
-    color:               #00DFFC;
-    text-decoration:     none;
+header a:                    hover {
+    color:                   #00DFFC;
+    text-decoration:         none;
 }
 
 aside {
-    position:            absolute;
-    top:                 0px;
-    left:                0px:
-    bottom:              0px;
-    width:               20%;
-
 }
 
 aside div#logo {
-    z-index:             0;
-    position:            absolute;
-    top:                 125px;
-    left:                150px;
-    text-align:          center;
-    font-size:           128pt;
-    color:               #343838;
-    text-shadow:         0 -1px 1px black, 0 1px 1px gray;
+    z-index:                 0;
+    position:                absolute;
+    width:                   20%;
+    top:                     125px;
+    left:                    150px;
+    text-align:              center;
+    font-size:               128pt;
+    color:                   #343838;
+    text-shadow:             0 -1px 1px black, 0 1px 1px gray;
 }
-aside div#logo:hover {
-    color:               #005F6B;
+aside div#logo:              hover {
+    color:                   #005F6B;
 }
 
 aside div#grass {
-    z-index:             2;
-    position:            absolute;
-    background-image:    url('../pic/grass_rising.png');
-    width:               250px;
-    height:              495px;
-    bottom:              0px;
+    z-index:                 2;
+    position:                absolute;
+    background-image:        url('../pic/grass_rising.png');
+    background-repeat:       no-repeat;
+    background-attachment:   fixed;
+    background-position:     center;
+
+    width:                   20%;
+    min-width:               250px;
+    height:                  495px;
+    left:                    150px;
+    bottom:                  0px;
 }
 
 nav {
-    bottom:              0px;
-    left:                300px;
-    height:              50px;
-    
-    margin-bottom:       50px;
+    bottom:                  0px;
+    left:                    300px;
+    height:                  50px;
+
+    margin-bottom:           50px;
 
 
-    font-family:         Courier;
-    font-size:           24px;
+    font-family:             Courier;
+    font-size:               24px;
 }
 
 nav.center {
 
-    width:200px;
-    margin: 0 auto;
-    margin-top: 100px;
-    font-size: 72px;
+    width:                   200px;
+    margin:                  0 auto;
+    margin-top:              100px;
+    font-size:               72px;
 }
 
 nav ul {
 }
 
 nav ul li {
-    /* display:             inline; */
-    color:               #008C9E;
-    padding-right:       15px;
-    word-spacing:        -0.3em;
+    /* display:              inline; */
+    color:                   #008C9E;
+    padding-right:           15px;
+    word-spacing:            -0.3em;
 }
 
 nav.center ul li {
-    /* display:             inline; */
-    list-style-type:     none;
-    padding-right:       15px;
-    padding-bottom:      75px;
-    margin-left:        -35px;
-    word-spacing:        -0.3em;
+    /* display:              inline; */
+    list-style-type:         none;
+    padding-right:           15px;
+    padding-bottom:          75px;
+    margin-left:             -35px;
+    word-spacing:            -0.3em;
 }
 
-nav ul li:hover {
-    list-style-type:     disc;
+nav ul li:                   hover {
+    list-style-type:         disc;
 }
 
 footer {
-    position:            absolute;
-    bottom:              0px;
-    left:                0px;
-    right:               0px;
-    height:              1px;
-    width:               100%;
-    background-color:    black;
+    position:                absolute;
+    bottom:                  0px;
+    left:                    0px;
+    right:                   0px;
+    height:                  1px;
+    width:                   100%;
+    background-color:        black;
 
-    -webkit-box-shadow:  0px 0px 55px 10px rgba(0, 0, 0, 1);
+    -webkit-box-shadow:      0px 0px 55px 10px rgba(0, 0, 0, 1);
 
-    box-shadow:          0px 0px 55px 10px rgba(0, 0, 0, 1);
-    background:          -webkit-linear-gradient
-    background:          -o-linear-gradient
-    background:          -ms-linear-gradient
-    background:          linear-gradient
-    filter:progid:DXImageTransform.Microsoft.gradient
+    box-shadow:              0px 0px 55px 10px rgba(0, 0, 0, 1);
+    background:              -webkit-linear-gradient
+    background:              -o-linear-gradient
+    background:              -ms-linear-gradient
+    background:              linear-gradient
+    filter:                  progid:                              DXImageTransform.Microsoft.gradient
 }
 
 /* Tag Styles */
 h1 {
-    font-weight:         normal;
-    color:               #00B4CC;
-    font-size:           34pt;
-    text-transform:      uppercase;
-    font-family:         'Courier';
-    letter-spacing:      -2px;
-    line-height:         90%;
+    font-weight:             normal;
+    color:                   #00B4CC;
+    font-size:               34pt;
+    text-transform:          uppercase;
+    font-family:             'Courier';
+    letter-spacing:          -2px;
+    line-height:             90%;
 }
 
 
-/* Classes */ 
+/* Classes */
 .deeper {
-    color:               #008C9E;
+    color:                   #008C9E;
 }
 .deeper a {
-    color:               #008C9E;
-    text-decoration:     none;
+    color:                   #008C9E;
+    text-decoration:         none;
 }
-.deeper a:hover {
-    color:               #008C9E;
-    text-decoration:     none;
+.deeper a:                   hover {
+    color:                   #008C9E;
+    text-decoration:         none;
 }
 
 .shedressedme {
-    color:               #00B4CC;
+    color:                   #00B4CC;
 }
 .shedressedme a {
-    color:               #00B4CC;
-    text-decoration:     none;
+    color:                   #00B4CC;
+    text-decoration:         none;
 }
 
 .aquaburst {
-    color:               #00DFFC;
+    color:                   #00DFFC;
 }
 .aquaburst a {
-    color:               #00DFFC;
-    text-decoration:    none;
+    color:                   #00DFFC;
+    text-decoration:         none;
 }
