--- a/_src/_includes/head.html
+++ b/_src/_includes/head.html
@@ -2,6 +2,6 @@
         <meta charset="utf-8">
         <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 
-        <link href="{{ site.domain }}/css/font.css" type="text/css" rel="stylesheet"> 
-        <link href="{{ site.domain }}/css/style.css" type="text/css" rel="stylesheet">
+        <link href="/css/font.css" type="text/css" rel="stylesheet"> 
+        <link href="/css/style.css" type="text/css" rel="stylesheet">
     </head>
