--- a/_src/_layouts/wire.html
+++ b/_src/_layouts/wire.html
@@ -4,14 +4,15 @@
     {% include head.html %}
     
     <body>
-        <section>
+        <div id="wrapper">
+            <section>
             {{ content }}
-        </section>
+            </section>
 
-        {% include aside.html %}
+            {% include aside.html %}
+        </div>
 
         {% include footer.html %}
-
     </body>
 
 </html>
