--- a/_src/css/style.css
+++ b/_src/css/style.css
@@ -14,10 +14,10 @@ body {
 /* Layout */
 #wrapper {
     position:   absolute;
-    top:        0px;
-    left:       0px;
-    right:      0px;
-    bottom:     0px;
+    top:        0;
+    left:       0;
+    right:      0;
+    bottom:     0;
     width:      100%;
     min-width:  800px;
     height:     100%;
@@ -26,7 +26,7 @@ body {
 section {
     position:     absolute;
     top:          75px;
-    bottom:       0px;
+    bottom:       0;
     left:         35%;
     width:        55%;
     min-width:    550px;
@@ -52,12 +52,13 @@ header a:hover {
 }
 
 aside {
+    /* space */
 }
-aside div#logo {
+aside #logo {
     z-index:              0;
     position:             relative;
     top:                  125px;
-    left:                 0px;
+    left:                 0;
     width:                35%;
 
     text-align:           center;
@@ -65,14 +66,14 @@ aside div#logo {
     color:                #343838;
     text-shadow:          0 -2px 1px black, 0 2px 1px gray;
 }
-aside div#logo:           hover {
+aside #logo:hover {
     color:                #005F6B;
 }
-aside div#grass {
+aside #grass {
     z-index:              2;
 
     position:             absolute;
-    bottom:               0px;
+    bottom:               0;
     height:               495px;
     width:                35%;
 
@@ -87,12 +88,13 @@ nav {
     font-size:      24px;
 }
 nav ul {
+    /* space */
 }
 nav ul li {
     /* display:              inline; */
     color:                   #008C9E;
     word-spacing:            -0.3em;
-    line-height:             0pt;
+    line-height:             0;
     padding-bottom:          60pt;
 }
 nav.center {
@@ -116,21 +118,16 @@ nav ul li:hover {
 footer {
     z-index:3;
     position:                absolute;
-    bottom:                  0px;
-    left:                    0px;
-    right:                   0px;
+    bottom:                  0;
+    left:                    0;
+    right:                   0;
     height:                  1px;
     width:                   100%;
     background-color:        black;
 
-    -webkit-box-shadow:      0px 0px 55px 10px rgba(0, 0, 0, 1);
-
-    box-shadow:              0px 0px 55px 10px rgba(0, 0, 0, 1);
-    background:              -webkit-linear-gradient
-    background:              -o-linear-gradient
-    background:              -ms-linear-gradient
-    background:              linear-gradient
-    filter:progid:DXImageTransform.Microsoft.gradient
+    -webkit-box-shadow:      0 0 55px 10px rgba(0, 0, 0, 1);
+    -mox-box-shadow:         0 0 55px 10px rgba(0, 0, 0, 1);
+    box-shadow:              0 0 55px 10px rgba(0, 0, 0, 1);
 }
 
 /* Tag Styles */
@@ -188,9 +185,9 @@ div.xkcd-quote {
     margin:          0 auto;
 }
 .xkcd-quote p {
-    margin:          0px;
+    margin:          0;
     padding-bottom:  -5px;
-    padding-top:     0px;
+    padding-top:     0;
     padding-left:    40px;
 }
 .xkcd-quote a {
