--- a/_src/_includes/head.html
+++ b/_src/_includes/head.html
@@ -1,7 +1,8 @@
     <head>
         <meta charset="utf-8">
-        <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
+        <title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.title }}</title>
 
         <link href="/css/font.css" type="text/css" rel="stylesheet"> 
         <link href="/css/style.css" type="text/css" rel="stylesheet">
+        <link href="/favicon.png" rel="icon">
     </head>
