--- a/_src/css/style.css
+++ b/_src/css/style.css
@@ -57,12 +57,13 @@ aside {
 aside #logo {
     z-index:              0;
     position:             relative;
-    top:                  125px;
+    top:                  100px;
     left:                 0;
     width:                35%;
 
     text-align:           center;
     font-size:            128pt;
+    font-family:          Verdana;
     color:                #343838;
     text-shadow:          0 -2px 1px black, 0 2px 1px gray;
 }
@@ -126,7 +127,7 @@ footer {
     background-color:        black;
 
     -webkit-box-shadow:      0 0 55px 10px rgba(0, 0, 0, 1);
-    -mox-box-shadow:         0 0 55px 10px rgba(0, 0, 0, 1);
+    -moz-box-shadow:         0 0 55px 10px rgba(0, 0, 0, 1);
     box-shadow:              0 0 55px 10px rgba(0, 0, 0, 1);
 }
 
