--- a/_src/_includes/head.html
+++ b/_src/_includes/head.html
@@ -1,5 +1,6 @@
     <head>
         <meta charset="utf-8">
+        <meta http-equiv="refresh" content="5">
         <title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.title }}</title>
 
         <link href="/css/font.css" type="text/css" rel="stylesheet"> 
