--- a/_src/_includes/head.html
+++ b/_src/_includes/head.html
@@ -1,7 +1,7 @@
     <head>
         <meta charset="utf-8">
         {% comment %} <meta http-equiv="refresh" content="5"> {% endcomment %}
-        <title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.title }}</title>
+        <title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.name }}</title>
 
         <link href="/css/font.css" type="text/css" rel="stylesheet"> 
         <link href="/css/style.css" type="text/css" rel="stylesheet">
