--- a/_src/_includes/head.html
+++ b/_src/_includes/head.html
@@ -3,7 +3,9 @@
         {% comment %} <meta http-equiv="refresh" content="5"> {% endcomment %}
         <title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.name }}</title>
 
-        <link href="/css/font.css" type="text/css" rel="stylesheet"> 
-        <link href="/css/style.css" type="text/css" rel="stylesheet">
-        <link href="/favicon.png" rel="icon">
+        <link href="/css/font.css" type="text/css" rel="stylesheet" /> 
+        <link href="/css/style.css" type="text/css" rel="stylesheet" />
+        <link href="/favicon.png" rel="icon" />
+        <link href="/feed.links.rss" type="application/rss+xml" rel="alternate" title="RSS Feed (links only)" />
+        <link href="/feed.rss" type="application/rss+xml" rel+"alternate" title="RSS Feed" />
     </head>
