--- a/_src/_includes/head.html
+++ b/_src/_includes/head.html
@@ -6,6 +6,6 @@
         <link href="/css/font.css" type="text/css" rel="stylesheet" /> 
         <link href="/css/style.css" type="text/css" rel="stylesheet" />
         <link href="/favicon.png" rel="icon" />
-        <link href="/feed.links.rss" type="application/rss+xml" rel="alternate" title="RSS Feed (links only)" />
-        <link href="/feed.rss" type="application/rss+xml" rel+"alternate" title="RSS Feed" />
+        <link href="/feed.xml" type="application/rss+xml" rel="alternate" title="RSS Feed" />
+        <link href="/feed.links.xml" type="application/rss+xml" rel="alternate" title="RSS Feed (links only)" />
     </head>
