CSS Code Cleanup

--- a/_src/_includes/aside.html
+++ b/_src/_includes/aside.html
@@ -1,16 +1,16 @@
         <aside>
+            <div class="grass center">
+            </div>
+
             {% if page.nav == false %}
-            <div id="logo">
+            <div class="atop logo">
                 &#622;
             </div>
             {% else %}
-            <div id="logo">
-                <nav class="aside">
+            <div class="atop">
+                <nav class="ntop">
                     {% include nav.html %}
                 </nav>
             </div>
             {% endif %}
-
-            <div id="grass">
-            </div>
         </aside>
