--- a/_src/_includes/head.html
+++ b/_src/_includes/head.html
@@ -1,12 +1,13 @@
     <head>
-        <meta charset="utf-8">
+        <meta charset="utf-8" />
         {% if site.refresh > 0%}
-        <meta http-equiv="refresh" content="{{ site.refresh }}">
+        <meta http-equiv="refresh" content="{{ site.refresh }}" />
         {% endif %}
         <title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.name }}</title>
 
         <link href="/css/font.css" type="text/css" rel="stylesheet" /> 
-        <link href="/css/style.css" type="text/css" rel="stylesheet" />
+        <link href="/css/layout.css" type="text/css" rel="stylesheet" />
+        <link href="/css/styles.css" type="text/css" rel="stylesheet" />
         <link href="/favicon.png" rel="icon" />
         <link href="/feed.xml" type="application/rss+xml" rel="alternate" title="RSS Feed" />
         <link href="/feed.links.xml" type="application/rss+xml" rel="alternate" title="RSS Feed (links only)" />
