--- a/_src/_layouts/wire.html
+++ b/_src/_layouts/wire.html
@@ -4,7 +4,7 @@
     {% include head.html %}
     
     <body>
-        <div id="wrapper">
+        <div class="wrapper">
             <section>
             {{ content }}
             </section>
