Move CSS/Font/Pics into one Folder

--- a/_src/_includes/head.html
+++ b/_src/_includes/head.html
@@ -5,9 +5,9 @@
         {% endif %}
         <title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.name }}</title>
 
-        <link href="/css/font.css" type="text/css" rel="stylesheet" /> 
-        <link href="/css/layout.css" type="text/css" rel="stylesheet" />
-        <link href="/css/styles.css" type="text/css" rel="stylesheet" />
+        <link href="/assets/css/font.css" type="text/css" rel="stylesheet" /> 
+        <link href="/assets/css/layout.css" type="text/css" rel="stylesheet" />
+        <link href="/assets/css/styles.css" type="text/css" rel="stylesheet" />
         <link href="/favicon.png" rel="icon" />
         <link href="/feed.xml" type="application/rss+xml" rel="alternate" title="RSS Feed" />
         <link href="/feed.links.xml" type="application/rss+xml" rel="alternate" title="RSS Feed (links only)" />
