--- a/_src/_includes/head.html
+++ b/_src/_includes/head.html
@@ -8,6 +8,7 @@
         <link href="/assets/css/font.css" type="text/css" rel="stylesheet" /> 
         <link href="/assets/css/layout.css" type="text/css" rel="stylesheet" />
         <link href="/assets/css/styles.css" type="text/css" rel="stylesheet" />
+        <link href="/assets/css/syntax.css" type="text/css" rel="stylesheet" />
         <link href="/favicon.png" rel="icon" />
         <link href="/feed.xml" type="application/rss+xml" rel="alternate" title="RSS Feed" />
         <link href="/feed.links.xml" type="application/rss+xml" rel="alternate" title="RSS Feed (links only)" />
