--- a/_src/_layouts/post.html
+++ b/_src/_layouts/post.html
@@ -1,5 +1,6 @@
 ---
 layout: wire
+blog: true
 ---
           <article>
                 <header><a href="{{ site.domain }}{{ page.url }}">{{ page.title }}</a></header>
