--- a/_src/_layouts/category_index.html
+++ b/_src/_layouts/category_index.html
@@ -1,11 +1,11 @@
 ---
 layout: page
+blog: true
 ---
 
 <ul class="posts">
 {% for post in site.categories[page.category] %}
-    <div>{{ post.date | date_to_html_string }}</div>
     <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-    <div class="categories">Filed under {{ post.categories | category_links }}</div>
+    <div>{{ post.date | date_to_html_string }}</div>
 {% endfor %}
 </ul>
