New Naming for Navigation

--- a/_src/_includes/nav.html
+++ b/_src/_includes/nav.html
@@ -1,5 +1,5 @@
                 <ul>
                     <li class="aquaburst"><a href="/blog/">Blog</a></li>
-                    <li class="shedressedme"><a href="/about/">About</a></li>
-                    <li class="deeper"><a href="/social/">Social</a></li>
+                    <li class="shedressedme"><a href="/about/">&Uuml;ber Mich</a></li>
+                    <li class="deeper"><a href="/projects/">Projekte</a></li>
                 </ul>
