Now with no search ;)

--- a/_src/_includes/aside.html
+++ b/_src/_includes/aside.html
@@ -22,6 +22,8 @@
                     </ul>
                     </div>
                 {% endif %}
+                <br />
+                {% comment %} <input type="search" name="search"> {% endcomment %}
             </div>
 
             <div class="grasssmall">
