--- a/_src/_includes/nav.html
+++ b/_src/_includes/nav.html
@@ -1,5 +1,5 @@
                 <ul>
                     <li class="aquaburst"><a href="/blog/">Blog</a></li>
-                    <li class="shedressedme"><a href="/about/">Projekte</a></li>
-                    <li class="deeper"><a href="/projects/">&Uuml;ber&nbsp;Mich</a></li>
+                    <li class="shedressedme"><a href="/projects/">Projekte</a></li>
+                    <li class="deeper"><a href="/about/">&Uuml;ber&nbsp;Mich</a></li>
                 </ul>
