--- a/_src/_includes/comments.html
+++ b/_src/_includes/comments.html
@@ -21,24 +21,12 @@
                     <h3>Post a comment</h3>
                     <p style="font-style:italic;font-size:10pt;">All comments are held for moderation; basic HTML formatting accepted.</p>
                     <form id="commentform" method="POST" action="{{site.url}}/commentsubmit.php">
+                        <br />
                         <input type="hidden" name="post_id" value="{{page.id}}" />
                         <input type="hidden" name="return_url" value="{{site.url}}{{page.url}}" />
-                        <table>
-                            <tr>
-                                <th>Name:</th>
-                                <td><input type="text" size="25" name="name" /> (required)</td>
-                            </tr>
-                            <tr>
-                            <br />
-                                <th>E-mail:</th>
-                                <td><input type="text" size="25" name="email" /> (required, not published)</td>
-                            </tr>
-                            <tr>
-                                <td colspan="2"><textarea name="comment" rows="10" cols="60" ></textarea></td>
-                            </tr>
-                            <tr>
-                                <td><input type="submit" name="" value="Submit Comment" /></td>
-                            </tr>
-                        </table>
+                        <input type="text" size="25" name="name" /><label for="name">Name</label><br>
+                        <input type="text" size="25" name="email" /><label for="email">Email</label><br>
+                        <textarea name="comment" rows="10" cols="60" ></textarea><br>
+                        <input type="submit" name="" value="Submit Comment" />
                     </form>
                 </div>
