Some Rework of Fonts

--- a/_src/_layouts/page.html
+++ b/_src/_layouts/page.html
@@ -2,6 +2,6 @@
 layout: wire
 ---
             <article>
-            <header><a href="{{ site.domain }}{{ page.url }}">{{ page.title }}</a></header>
+            <header><a href="{{ site.domain }}{{ page.url }}"><h1>{{ page.title }}</h1></a></header>
                     {{ content }}
             </article>
