--- a/_src/assets/css/styles.css
+++ b/_src/assets/css/styles.css
@@ -10,7 +10,7 @@
 body {
     background-color: #343636;
 
-    font-family: Courier, monospace;
+    font-family: Lucida Console, Monaco, Courier New, monospace;
     font-size: 12pt;
     color: silver;
     font-style: normal;
@@ -26,11 +26,16 @@ body {
     text-shadow: 0 -1px 1px black, 0 1px 2px gray;
 }
 .xkcd {
-    font-style: italic;
     text-align: left;
     text-transform: uppercase;
+    border: none;
+    font-family: Courier New, monospace;
 }
 .xkcd a {
+    text-decoration: none;
+    color: silver;
+}
+.xkcd a:hover {
     text-decoration: none;
     color: silver;
 }
@@ -56,14 +61,16 @@ body {
     font-size:24pt;
 }
 
-header {
+header h1 {
+    font-family: Courier, monospace;
     font-size:        58px;
     line-height:      0.8em;
     color:            #00DFFC;
     text-align:       left;
     word-spacing:     -0.3em;
     letter-spacing:   -3px;
-    margin-bottom:    30px;
+    margin-bottom:    35px;
+    margin-top: 0px;
 }
 header a {
     color:            #00DFFC;
@@ -102,9 +109,11 @@ h3 {
 
 /* Paragraph Style */
 p {
-    text-indent:             1em;
-    margin-bottom:           0.5em;
-    margin-top:              0.5em;
+    font-family: Lucida Console, Monaco, Courier New, monospace;
+    font-style: normal;
+    text-align:              left;
+    margin-bottom:           1.0em;
+    margin-top:              1.0em;
 }
 
 /* HR-Line Style */
@@ -185,4 +194,16 @@ label {
     font-size:10pt;
     color: gray;
     padding-left: 15px;
+}
+
+/* blockquote */
+blockquote {
+    font-family: 'Helvetica Neue', Helvetica, sans-serif;
+    border-left: 3px solid gray;
+    padding-left: 10px;
+}
+blockquote p {
+    font-family: 'Helvetica Neue', Helvetica, sans-serif;
+    font-weight: 200;
+    text-align: justify;
 }
