--- a/_src/assets/css/syntax.css
+++ b/_src/assets/css/syntax.css
@@ -1,4 +1,5 @@
-.highlight{background-color:#073642;color:#93a1a1;display:block;overflow-x:auto;overflow-y:hidden;width:90%;}
+.highlight{background-color:#222424;color:#93a1a1;width:100%;}
+.highlight pre{padding: 10px 10px;}
 .highlight .c{color:#586e75 !important;font-style:italic !important}
 .highlight .cm{color:#586e75 !important;font-style:italic !important}
 .highlight .cp{color:#586e75 !important;font-style:italic !important}
